# nlp2cmd

./: .env  .env.example  .gitignore  .semcod-mcp.yaml  CHANGELOG.md  ENHANCED_README.md  Makefile  PROJECT_STRUCTURE.md  README.md  REPO_SPLIT.md  SUMD.md  SUMR.md  TODO.md  add_fox.py  add_fox_to_vector_store.py  app.doql.less  biedronka.webm  browser_test.py  check_image.py  code2llm_workaround.py  debug.md  debug_detailed.py  debug_n_samples.py  examples.sh  fix_braces.py  fix_canvas_all.py  fix_colors.py  fix_fox_regex.py  fix_fox_vector.py  fix_fox_vector2.py  fix_fox_vector3.py  fix_fox_vector4.py  fix_llm_json.py  fix_syntax.py  flow.py  generate_chunks.py  generate_quick.py  generate_working.py  goal.yaml  index.html  (+39 more)
debug/: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  REFACTORING_PLAN.md  pyproject.toml  requirements.txt  standalone_test_results.yaml
debug/.code2flow_cache/: __init___067a3ea9a806bdcd.pkl  __init___06ee3b304cbac344.pkl  __init___07004ae5fc0b63a4.pkl  __init___092c164e1ea3ed2a.pkl  __init___1306939d2650ad0a.pkl  __init___1435b739d4a93c01.pkl  __init___1a3f34073e505d94.pkl  __init___20b71d7ad5e01760.pkl  __init___385814d063e205eb.pkl  __init___563e1960e3f8fe02.pkl  __init___572ca692ca892ca6.pkl  __init___5dc3f4a9a5c563f6.pkl  __init___5f101e48b13f9e43.pkl  __init___68ee55884662436d.pkl  __init___6900b358f501f389.pkl  __init___6a9966b0a2f9cbb9.pkl  __init___76b2ff3c7c7a719f.pkl  __init___78ac33fc54dab91c.pkl  __init___7979f0bf2e2f09f6.pkl  __init___7f1df5e1d9896e24.pkl  __init___80e164d9d8fb37d6.pkl  __init___88b45824945dd76b.pkl  __init___88fe7b9b65c4a4ce.pkl  __init___8ef9ec3a85f08102.pkl  __init___a21f626111278436.pkl  (+172 more)
(+2024 files in other folders)
